--- a/examples/fastapi/ui/templates/base.html
+++ b/examples/fastapi/ui/templates/base.html
@@ -17,6 +17,7 @@
         </ul>
         <ul>
           <li><a hx-boost="true" href="/ui/users">Users</a></li>
+          <li><a hx-boost="true" href="/ui/addresses">Addresses</a></li>
           <li><a href="/docs" target="_blank">API Docs</a></li>
           <li><a href="https://github.com/gabu-quest/SQLer" target="_blank">GitHub</a></li>
         </ul>
@@ -45,4 +46,3 @@
     </script>
   </body>
   </html>
-
