--- a/examples/fastapi/ui/templates/users/_edit_modal.html
+++ b/examples/fastapi/ui/templates/users/_edit_modal.html
@@ -2,7 +2,7 @@
   <header>
     <h3>Edit User #{{ user._id }}</h3>
   </header>
-  <form hx-post="/ui/users/{{ user._id }}" hx-target="#modal-body" hx-swap="outerHTML" _="on htmx:afterSwap trigger close-modal">
+  <form hx-post="/ui/users/{{ user._id }}" hx-target="#detail-panel" hx-swap="outerHTML">
     <input type="hidden" name="if_match" value="{{ etag }}">
     <div class="grid">
       <input name="name" value="{{ user.name }}" placeholder="Name">
@@ -20,4 +20,3 @@
     </footer>
   </form>
 </article>
-
